--- a/iCareJava/src/iHealth/ui/Visualisation_Doc_PH.form
+++ b/iCareJava/src/iHealth/ui/Visualisation_Doc_PH.form
@@ -651,6 +651,9 @@
                       <Color id="Hand Cursor"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel8MouseClicked"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="redactionLabel">
                   <Properties>
