--- a/iCareJava/src/iHealth/ui/Mes_Patients_PH.form
+++ b/iCareJava/src/iHealth/ui/Mes_Patients_PH.form
@@ -215,9 +215,9 @@
                           </Group>
                       </Group>
                       <Group type="102" attributes="0">
-                          <EmptySpace type="separate" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
