--- a/iCareJava/src/iHealth/ui/Visualisation_DMA.form
+++ b/iCareJava/src/iHealth/ui/Visualisation_DMA.form
@@ -92,9 +92,6 @@
             </Component>
             <Container class="javax.swing.JScrollPane" name="scrollPane">
               <Properties>
-                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="33" green="33" red="33" type="rgb"/>
                 </Property>
@@ -197,10 +194,7 @@
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Component id="patientLabel" pref="855" max="32767" attributes="0"/>
-                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="patientLabel" pref="855" max="32767" attributes="0"/>
                               <Component id="jPanel3" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -899,6 +893,10 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Num&#xe9;ro de la chambre"/>
               </Properties>
+              <Events>
+                <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="chambreLabelFocusGained"/>
+                <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="chambreLabelFocusLost"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
