--- a/iCareJava/src/iHealth/ui/Ajout_Doc_PH.form
+++ b/iCareJava/src/iHealth/ui/Ajout_Doc_PH.form
@@ -580,20 +580,12 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="numberOne" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="description" min="-2" pref="823" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="description" alignment="1" min="-2" pref="823" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
-                                  <Component id="documentTypeLabel" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="intituleLabel" min="-2" pref="823" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="documentTypeLabel" min="-2" max="-2" attributes="0"/>
+                              <Component id="intituleLabel" alignment="0" min="-2" pref="823" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="47" max="32767" attributes="0"/>
