--- a/iCareJava/src/iHealth/ui/Connexion.form
+++ b/iCareJava/src/iHealth/ui/Connexion.form
@@ -7,9 +7,6 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ff" green="ff" red="ff" type="rgb"/>
     </Property>
-    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[785, 496]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -69,7 +66,7 @@
                       <Group type="102" attributes="0">
                           <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="2" attributes="0">
-                              <Component id="errorMessage" alignment="2" min="-2" pref="224" max="-2" attributes="0"/>
+                              <Component id="errorMessage" alignment="2" min="-2" max="-2" attributes="0"/>
                               <Component id="connectButton" alignment="2" min="-2" pref="241" max="-2" attributes="0"/>
                               <Component id="identifiantField" alignment="2" min="-2" pref="401" max="-2" attributes="0"/>
                               <Component id="jLabel2" alignment="2" min="-2" pref="390" max="-2" attributes="0"/>
